<resources>
    <string name="app_name">Space Trader</string>
    <string name="error_player_config_low">Too few points allocated</string>
    <string name="error_player_config_high">Too many points allocated</string>

    <!--MARKET STRINGS-->
    <string name="marketBuyHeader">Market Buy</string>
    <string name="marketSellHeader">Market Sell</string>
    <string name="marketBuy">Buy</string>
    <string name="marketSell">Sell</string>
    <string name="itemName">Item</string>
    <string name="price">Price</string>
    <string name="quantityAval">Available</string>
    <string name="total">Total</string>
    <string name="creditsAval">Credits</string>
    <string name="quantityOwned">You Own</string>
    <string name="cargo">Cargo Used</string>

    <!--MARKET GOODS-->
    <string name="water">Water</string>
    <string name="furs">Furs</string>
    <string name="food">Food</string>
    <string name="ore">Ore</string>
    <string name="games">Games</string>
    <string name="firearms">Firearms</string>
    <string name="medicine">Medicine</string>
    <string name="machines">Machines</string>
    <string name="narcotics">Narcotics</string>
    <string name="robots">Robots</string>

    <!--PLANET INFO-->
    <string name="playerInfo">Player Information</string>
    <string name="planetInfo">Planet Information</string>
    <string name="planetName">Planet Name</string>
    <string name="size">Size</string>
    <string name="techLevel">Tech Level</string>
    <string name="government">Government</string>
    <string name="resource">Resource</string>
    <string name="police">Police</string>
    <string name="pirates">Pirates</string>
    <string name="distance">Distance</string>

    <!--Player info (credits and cargo used above already)-->
    <string name="playerFuel">Fuel Left</string>
    <string name="shipHealth">Ship Health</string>
    <string name="playerLocation">Player Location</string>

    <!--EVENT STRINGS-->
    <!--pirates-->
    <string name="pirateAttackMsg">You\'ve been attacked by a pirate ship!</string>
    <string name="pirateEventInfo">You can choose to use your skills as a fighter and dogfight
        with the pilot, or you can use your skills as a pilot and attempt to escape him!</string>

    <!--police-->
    <string name="policeStopMsg">You\'ve been stopped by a police ship!</string>
    <string name="policeEventInfo">You can choose to submit your cargo-hold to inspection
    and pay a fine for carrying illegal goods you can use your skills as a pilot
        and attempt to escape the police. Or you could fight\.\.\.</string>

    <!--trader-->
    <string name="traderStopMsg">You\'ve discovered a trader ship!</string>
    <string name="traderEventInfo">The trader ship does not have fuel. You can help this ship get back to civilization and in exchange
    they will give you some goods at a fair price\.
    </string>


    <string name="fight">Fight!</string>
    <string name="evade">Evade!</string>
    <string name="submit">Submit.</string>

</resources>
