<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:contentDescription="@string/pirateAttackMsg"
        app:srcCompat="@drawable/policeShip" />

    <TextView
        android:id="@+id/policeStopMsg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/policeStopMsg"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/policeEventInfo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/policeEventInfo"
        android:paddingBottom="20dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/evade" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/fight" />

</LinearLayout>