<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.spacetrader.viewmodels.BuyViewModel"/>
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="70dp" />

            <android.support.constraint.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/marketBuyHeader"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:text="@string/marketBuyHeader"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.373"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="580dp"
                android:padding="20dip"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="54dp">

                <TableRow>

                    <TextView
                        android:paddingRight="50dip"
                        android:text="@string/itemName" />

                    <TextView
                        android:paddingRight="40dip"
                        android:text="@string/price" />

                    <TextView
                        android:paddingRight="20dip"
                        android:text="@string/quantityAval" />

                    <TextView
                        android:paddingRight="20dip"
                        android:text="@string/quantityOwned" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/water" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/furs" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/food" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/ore" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/games" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/firearms" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/medicine" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/machines" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/narcotics" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="2dip"
                        android:text="@string/robots" />

                    <TextView
                        android:padding="2dip"
                        android:text="double" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <TextView
                        android:padding="2dip"
                        android:text="int" />

                    <EditText
                        android:ems="5"
                        android:inputType="number" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingRight="10dip"
                        android:text="@string/cargo" />

                    <TextView android:text="int/int" />

                    <TextView
                        android:padding="4dip"
                        android:text="" />

                    <TextView
                        android:padding="4dip"
                        android:text="" />

                    <TextView
                        android:padding="4dip"
                        android:text="" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:paddingRight="10dip"
                        android:text="@string/creditsAval" />

                    <TextView android:text="double" />

                    <TextView
                        android:padding="4dip"
                        android:text="" />

                    <TextView
                        android:padding="4dip"
                        android:text="@string/total" />

                    <TextView
                        android:padding="4dip"
                        android:text="double" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketBuy"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="607dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>
